--- a/Proiect_PAW/Proiect_PAW.csproj
+++ b/Proiect_PAW/Proiect_PAW.csproj
@@ -88,6 +88,11 @@
     <Compile Include="Client_ATM.Designer.cs">
       <DependentUpon>Client_ATM.cs</DependentUpon>
     </Compile>
+    <Compile Include="DatabaseAngajatiDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DatabaseAngajatiDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Extragere_Form.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -166,6 +171,17 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="DatabaseAngajatiDataSet.xsc">
+      <DependentUpon>DatabaseAngajatiDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="DatabaseAngajatiDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DatabaseAngajatiDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="DatabaseAngajatiDataSet.xss">
+      <DependentUpon>DatabaseAngajatiDataSet.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
