--- a/Proiect_PAW/Proiect_PAW.csproj
+++ b/Proiect_PAW/Proiect_PAW.csproj
@@ -100,6 +100,12 @@
     <Compile Include="Client_ATM.Designer.cs">
       <DependentUpon>Client_ATM.cs</DependentUpon>
     </Compile>
+    <Compile Include="Client_nou.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Client_nou.Designer.cs">
+      <DependentUpon>Client_nou.cs</DependentUpon>
+    </Compile>
     <Compile Include="DatabaseAngajatiDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -149,6 +155,12 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>DatabaseAngajatiDataSet9.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Depunere_form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Depunere_form.Designer.cs">
+      <DependentUpon>Depunere_form.cs</DependentUpon>
     </Compile>
     <Compile Include="Extragere_Form.cs">
       <SubType>Form</SubType>
@@ -211,6 +223,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Client_ATM.resx">
       <DependentUpon>Client_ATM.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Client_nou.resx">
+      <DependentUpon>Client_nou.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Depunere_form.resx">
+      <DependentUpon>Depunere_form.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Extragere_Form.resx">
       <DependentUpon>Extragere_Form.cs</DependentUpon>
